Change config db

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "WebApiDatabase": "server=localhost; database=colmado; user=root; password=ydh123456789"
-},
+    "WebApiDatabase": "Server=cidzdccnto2j.us-east-4.psdb.cloud;Database=api-prueba;user=eno8scirq2bp;password=pscale_pw_vzVpm9fEoWi5cJqgBa5zulEMer4uCsMQGHRP9GGzYCA;SslMode=VerifyFull;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
