Changes crendentials db

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "WebApiDatabase": "Server=cidzdccnto2j.us-east-4.psdb.cloud;Database=api-prueba;user=eno8scirq2bp;password=pscale_pw_vzVpm9fEoWi5cJqgBa5zulEMer4uCsMQGHRP9GGzYCA;SslMode=VerifyFull;"
+    "WebApiDatabase": "Server=cidzdccnto2j.us-east-4.psdb.cloud;Database=api-prueba;user=k9kydsbhbj8j;password=pscale_pw_UMZ-TTs1U4xd-WJXYkn28IPkZYy451Ko2Um7-OuP9d8;SslMode=VerifyFull;"
   },
   "Logging": {
     "LogLevel": {
